<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/image_viewer_coin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/the_winner" />

        <TextView
            android:id="@+id/tv_winner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/image_viewer_coin"
            android:layout_alignRight="@id/image_viewer_coin"
            android:layout_alignBottom="@id/image_viewer_coin"
            android:gravity="center"
            android:lines="1"
            android:padding="8dp"
            android:text="@string/n_a_value"
            android:textAllCaps="true"
            android:textColor="#D32F2F"
            android:textSize="70dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/score_team"
                android:textSize="18sp"
                android:textStyle="bold" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_nameA_am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_nameB_am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_scoreA_am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="40dp" />

                <TextView
                    android:id="@+id/tv_scoreB_am"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="40dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/fecha_juego"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_date_am"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/hora_juego"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_time_am"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/n_a_value"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>